--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 	    <meta charset="utf-8" />
-	    <title>GCore</title>
+	    <title>Vengeance</title>
 	    <link rel="stylesheet" href="css/app.css" type="text/css" />
 	    <script src="js/phaser-min.js"></script> 
-    	<script src="js/GCore.js"></script> 
-    
+	    <script src="js/Dude.js"></script> 
+	    <script src="js/Enemy.js"></script> 
+    	<script src="js/GCore.js"></script>    
 	</head>
 	<body>	
 	    <div id="content"></div>
