--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	    <script src="js/phaser-min.js"></script> 
 	    <script src="js/Dude.js"></script> 
 	    <script src="js/Enemy.js"></script> 
+	    <script src="js/Obstacle.js"></script> 
     	<script src="js/GCore.js"></script>    
 	</head>
 	<body>	
